add one more table to database of custom medicine bcoz in UserMedicine table there is multiple null values